# Alpha-Group-Mobile-Robotics

./: README.md
PS10_mobile_manipulation_pt1/kinect_picture_taking/: pcd_snapshot.cpp
PS2/: CMakeLists.txt  README.md  package.xml
PS2/WallFollowingRobot/: README.md
PS2/double_vec_srv/: package.xml
PS2/single_node_wall_follower/: README.md
PS2/single_node_wall_follower/src/: wall_follower.py
PS2/wall_follower_package/: .package.xml.swp  CMakeLists.txt  README.md  package.xml  package.xml.save
PS2/wall_follower_package/double_vec_srv/: CMakeLists.txt  README.md
PS2/wall_follower_package/launch/: wall_follower.launch
PS3_curvature_calibration_and_lane_drift_control/: PS3_matlab_script.m  PS3_matlab_script.m~  PS3_matlab_script_complete_with_functions.m  f.m  rk4.m  trimdcircle11.csv  trimdcircle13.csv  trimdcircle15.csv  trimdcircle6.csv  trimdcircle8.csv  trimdcircle9.csv
PS4_trajectory_control_part1/dsp_service/: CMakeLists.txt  README.md  package.xml
PS4_trajectory_control_part1/mobot_path_execution/: CMakeLists.txt  README.md  package.xml
PS4_trajectory_control_part1/mobot_path_execution/launch/: mobot_path_executor.launch
PS4_trajectory_control_part1/mobot_path_execution/src/: current_state_publisher.cpp  des_state_publisher_service.cpp  lidar_alarm.cpp  lidar_alarm2.cpp  modal_trajectory_controller.cpp  navigation_coordinator.cpp
PS5_map_making_in_the_lab/lab_map_making/: CMakeLists.txt  package.xml
PS6_odometry_calibration/: PS3_matlab_script.m  PS6_matlab_script_complete_with_functions.m  circle8.csv  circle9.csv  controller.m  csvTrimmer.m  f.m  localization_analysis.m  trimdcircle1.csv  trimdcircle10.csv  trimdcircle12.csv  trimdcircle14.csv  trimdcircle2.csv  trimdcircle3.csv  trimdcircle4.csv  trimdcircle5.csv  trimdcircle7.csv
PS7_Lab2_linear_steering_feedback/: README.md  lab2_lin_steering_wrt_odom.cpp  lab2_steering_algorithm.h
PS7_Lab2_linear_steering_feedback/lab map/: gazeboPen.yaml  table1coordinates.txt
PS7_Lab2_linear_steering_feedback/lin_steering/: CMakeLists.txt
PS7_Lab2_linear_steering_feedback/path_client/: CMakeLists.txt  README.md  package.xml
PS8_lab3_both_tables/ps8_mobot_pub_des_state/: CMakeLists.txt  package.xml
PS8_lab3_both_tables/ps8_path_client/: CMakeLists.txt  package.xml
PS9_Lab4_PCL_Processing/: README.md
PS9_Lab4_PCL_Processing/alt_pcl_utils/: make_and_display_target.cpp  make_clouds_for_blocks.cpp
PS9_Lab4_PCL_Processing/launch/: kinect_transform_demo.launch
PS9_Lab4_PCL_Processing/table_transform/: CMakeLists.txt  README.md  package.xml
WallFollowingRobot/: CMakeLists.txt
alpha_final/: CMakeLists.txt  README.md  actualNewGazeboMap.yaml  newGazeboMap.yaml  package.xml  table_2.cpp
alpha_final/launch/: alpha_final_real.launch  alpha_final_services.launch  alpha_final_services_test.launch  alpha_final_sim.launch  alpha_final_sim_newmap.launch  lab5_alpha_final.launch  transform.launch  transform_table2torso.launch
alpha_final/src/: backup_service.cpp  backup_service_test.cpp  baxter_only_coordinator.cpp  docking_service_1.cpp  find_block_service.h  find_centroid_service.cpp  nav_controller.cpp  nav_p2p_service.cpp  new_backup_service.cpp  new_centroid_service.cpp  new_centroid_service1-5.cpp  new_centroid_service2.cpp  new_coordinator.cpp  new_nav_controller.cpp  object_dropper_service.cpp  object_grabber_service.cpp  origin.cpp  path_client_2_tables.cpp  pub_des_state_new.h
alpha_final/srv/: BackupService.srv  FindCentroidService.srv  NavService.srv  ObjectGrabberService.srv
mobot_pub_des_state/src/: pub_des_state.h  pub_des_state_main.cpp
pcl_utils_updated_folder/pcl_utils/: CMakeLists.txt
pub_des_state_final/: CMakeLists.txt  package.xml
pub_des_state_final/src/: pub_des_state.cpp  pub_des_state.h  pub_des_state2.h  pub_des_state_main.cpp
(+25 files in other folders)
